make sure avatars don't jump

--- a/src/components/Likes.css
+++ b/src/components/Likes.css
@@ -9,6 +9,7 @@
 
 .Like__image {
   width: 40px;
+  height: 40px;
   margin-bottom: 0.1em;
   transition: scale linear 0.1s;
 }
