--- a/src/components/Mentions.css
+++ b/src/components/Mentions.css
@@ -15,6 +15,7 @@
 
 .Mention__image {
   width: 60px;
+  height: 60px;
 }
 
 .Mention__authorLink {
